# rospy_geomutils

./: CMakeLists.txt  README.md  package.xml  setup.py
examples/: quat.py  rigid.py
rospy_geomutils/: __init__.py  lines.py  quaternion.py  rigid_transform.py  tfbuf.py  util.py
tests/: test_quaternion.py  test_rigid_transform.py
